tests/parse_print/autogen-bilals-fixed/282fe3e111717af84f27689693c94ac4/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/282fe3e111717af84f27689693c94ac4/282fe3e111717af84f27689693c94ac4.eprime.essence:4:16:
unexpected undefined
expecting ), comma, or rest of range
            int(0..undefined(modulo zero: 0 % 0 : `int`))
                   ^